  - BIOS CON: output is converted to ASCII and redirected to host console
    with the --bios-intercept option
  - Support for tracing DSP, Videl and Crossbar
  - Support for tracing AES calls.  VDI calls can now be traced
    also without using an extended VDI resolution
  - BIOS/XBIOS/GEMDOS/VDI/AES/Line-A/Line-F opcode breakpoint support
  - "aes", "vdi" and "gemdos" subcommands for "info".  Without arguments
    they will output information about corresponding OS part state,
    with (a non-zero) argument, opcode/call name table is shown.
    "video" subcommand for showing video related information.
  - "file" subcommand to "lock" that executes debugger commands from
    given file when debugger is entered (or ":lock" breakpoint is hit)
  - ":lock" option to breakpoints that will show without stopping the
    emulation the same output as what's shown on entering the debugger
  - ":file" option to breakpoints that executes the commands from
    given file when the breakpoint is hit, this can be used to chain
    debugger actions
  - multiple breakpoints options can be specified per breakpoint
  - parenthesis in "evaluate" command are used to indicate memory
    accesses (instead of operator precedence like earlier)
  - DSP and CPU code profiling functionality.  Provides statistics about
    profiled code (executed code address ranges, max and total counts
    and cycles), lists addresses/instructions taking most cyles and if
    symbols are loaded, what were the most used symbol addresses.
  - Profiling information is also shown in disassembly output

Other changes:
- hmsa tool can create empty disk images in addition to converting
  disks between ST & MSA formats
- Minimal hatari-tos-register.sh Linux init script (example)
  to register Hatari as binfmt_misc handler/runner for TOS programs
- hatari-console.py renamed to hconsole.py, documented and made extensible
  (hconsole is command line Python interface for Hatari remote API)